feat: Enhance client-side functionality with keybindings, HUD overlay, and gift box mechanics